[package]
name = "mysql-binlog-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
futures-util = "0.3.30"
mysql_async = { version = "0.33", features = ["binlog"]}
tokio = { version = "1", features = ["full", "time"]}
uuid = "1.6.1"
